# service-deploy-status

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-test-push.yaml
app/: libsystems.py  main.py  observability.py  settings.py  systems.toml  systems.yaml  wsgi.py
app/templates/: base.html  index.html  system.html  system_error.html
config/: local_dev.env
k6-scripts/: script.js  test_urls.json
scripts/: entrypoint.sh  run_loadtest.sh  run_web.sh
tests/: conftest.py  test_libsystems.py  test_routes.py
