[project]
name = "service-deploy-status"
version = "0.1.0"
description = "Service for showing deploy status for services"
license = {text = "MPLv2"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dockerflow>=2024.4.2",
    "flask>=3.1.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.3",
    "pytest-responses>=0.5.1",
    "pyyaml>=6.0.2",
    "requests>=2.33.1",
    "responses>=0.25.7",
    "ruff>=0.14.3",
    "stamina>=25.1.0",
    "waitress>=3.0.2",
]
